--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.2.0",
     "gulp-uglifyjs": "^0.6.2",
-    "imagemin-pngquant": "^4.2.2"
+    "imagemin-pngquant": "^4.2.2",
+    "sass-mediaqueries": "^1.6.1"
   }
 }
